[gd_scene load_steps=15 format=2]

[ext_resource path="res://Level1.gd" type="Script" id=1]
[ext_resource path="res://Backgrounds/forest_001_1920x1080.png" type="Texture" id=2]
[ext_resource path="res://Portal.tscn" type="PackedScene" id=3]
[ext_resource path="res://Plataforma.tscn" type="PackedScene" id=4]
[ext_resource path="res://Key.tscn" type="PackedScene" id=5]
[ext_resource path="res://Goblin.tscn" type="PackedScene" id=6]
[ext_resource path="res://Coin.tscn" type="PackedScene" id=7]
[ext_resource path="res://Ground.tscn" type="PackedScene" id=8]
[ext_resource path="res://Tiles/tileset.tres" type="TileSet" id=9]
[ext_resource path="res://Princess.tscn" type="PackedScene" id=10]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=11]
[ext_resource path="res://CoinSound.tscn" type="PackedScene" id=12]
[ext_resource path="res://GameOverSound.tscn" type="PackedScene" id=13]
[ext_resource path="res://GameSound.tscn" type="PackedScene" id=14]

[node name="Level1" type="Node"]
script = ExtResource( 1 )

[node name="Forest" type="Sprite" parent="."]
position = Vector2( 480.303, 269.469 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Forest2" type="Sprite" parent="Forest"]
position = Vector2( 1808.31, 0 )
texture = ExtResource( 2 )
flip_h = true

[node name="Portal" parent="Forest" instance=ExtResource( 3 )]
position = Vector2( 2717.94, -326.344 )
scale = Vector2( 2, 2 )

[node name="Plataforma" parent="Forest" instance=ExtResource( 4 )]
position = Vector2( -318.063, 323.874 )
scale = Vector2( 2, 2 )

[node name="Plataforma2" parent="Forest" instance=ExtResource( 4 )]
position = Vector2( -862.192, 146.859 )
scale = Vector2( 2, 2 )

[node name="Plataforma3" parent="Forest" instance=ExtResource( 4 )]
position = Vector2( 2654.3, -101.323 )
scale = Vector2( 2, 2 )

[node name="Plataforma4" parent="Forest" instance=ExtResource( 4 )]
position = Vector2( 586.216, -53.9596 )
scale = Vector2( 2, 2 )

[node name="Plataforma5" parent="Forest" instance=ExtResource( 4 )]
position = Vector2( 98.0492, 142.834 )
scale = Vector2( 1.99181, 1.97827 )

[node name="Plataforma6" parent="Forest" instance=ExtResource( 4 )]
position = Vector2( 1116.42, 107.867 )
scale = Vector2( 1.99181, 1.97827 )

[node name="Plataforma7" parent="Forest" instance=ExtResource( 4 )]
position = Vector2( -8.64581, -226.758 )
scale = Vector2( 1.99181, 1.97827 )

[node name="Plataforma8" parent="Forest" instance=ExtResource( 4 )]
position = Vector2( 1618.04, -66.984 )
scale = Vector2( 1.99181, 1.97827 )

[node name="Plataforma9" parent="Forest" instance=ExtResource( 4 )]
position = Vector2( 2102.66, 62.529 )
scale = Vector2( 1.99181, 1.97827 )

[node name="Plataforma10" parent="Forest" instance=ExtResource( 4 )]
position = Vector2( 1234.58, -270.177 )
scale = Vector2( 1.99181, 1.97827 )

[node name="Plataforma11" parent="Forest" instance=ExtResource( 4 )]
position = Vector2( 2633.39, 229.519 )
scale = Vector2( 1.99181, 1.97827 )

[node name="Key" parent="Forest" instance=ExtResource( 5 )]
position = Vector2( -4.78955, -292.508 )
scale = Vector2( 4, 4 )

[node name="Goblin" parent="Forest" instance=ExtResource( 6 )]
position = Vector2( 184.113, 42.231 )
scale = Vector2( 4, 4 )

[node name="Goblin2" parent="Forest" instance=ExtResource( 6 )]
position = Vector2( 2197.43, -36.6688 )
scale = Vector2( 4, 4 )

[node name="Coin" parent="Forest" instance=ExtResource( 7 )]
position = Vector2( -890.696, 47.972 )

[node name="Coin2" parent="Forest" instance=ExtResource( 7 )]
position = Vector2( -319.769, 232.929 )

[node name="Coin3" parent="Forest" instance=ExtResource( 7 )]
position = Vector2( 839.325, 416.379 )

[node name="Coin4" parent="Forest" instance=ExtResource( 7 )]
position = Vector2( 1198.75, -352.364 )

[node name="Coin5" parent="Forest" instance=ExtResource( 7 )]
position = Vector2( 2699.38, 129.984 )

[node name="Coin6" parent="Forest" instance=ExtResource( 7 )]
position = Vector2( 1267.09, -352.235 )

[node name="Coin7" parent="Forest" instance=ExtResource( 7 )]
position = Vector2( 921.767, 414.789 )

[node name="Coin8" parent="Forest" instance=ExtResource( 7 )]
position = Vector2( 1010, 414.789 )

[node name="Coin9" parent="Forest" instance=ExtResource( 7 )]
position = Vector2( 2630.13, 129.536 )

[node name="Coin10" parent="Forest" instance=ExtResource( 7 )]
position = Vector2( -245.625, 235.216 )

[node name="Coin11" parent="Forest" instance=ExtResource( 7 )]
position = Vector2( 1095.5, 416.187 )

[node name="Coin12" parent="Forest" instance=ExtResource( 7 )]
position = Vector2( -817.207, 47.972 )

[node name="Ground2" parent="Forest" instance=ExtResource( 8 )]
position = Vector2( 986.246, -539.27 )
scale = Vector2( 2, 2 )

[node name="Ground" parent="Forest" instance=ExtResource( 8 )]
position = Vector2( -960.606, -538.938 )
scale = Vector2( 2, 2 )

[node name="TileMap" type="TileMap" parent="Forest"]
scale = Vector2( 0.2, 0.2 )
tile_set = ExtResource( 9 )
cell_size = Vector2( 200, 200 )
format = 1
tile_data = PoolIntArray( -851993, 11, 0, -917435, 12, 0, -786457, 11, 0, -851899, 12, 0, -720921, 11, 0, -786363, 12, 0, -655385, 11, 0, -720827, 12, 0, -589849, 11, 0, -655291, 12, 0, -524313, 11, 0, -589755, 12, 0, -458777, 11, 0, -524219, 12, 0, -393241, 11, 0, -458683, 12, 0, -327705, 11, 0, -393147, 12, 0, -262169, 11, 0, -327611, 12, 0, -196633, 11, 0, -262075, 12, 0, -131097, 11, 0, -196539, 12, 0, -65561, 11, 0, -131003, 12, 0, -25, 11, 0, -65467, 12, 0, 65511, 11, 0, 69, 12, 0, 131047, 11, 0, 65605, 12, 0, 196583, 11, 0, 131141, 12, 0, 262119, 11, 0, 196677, 12, 0, 327655, 11, 0, 262213, 12, 0, 393191, 11, 0, 327749, 12, 0, 458727, 11, 0, 393285, 12, 0, 524263, 11, 0, 458821, 12, 0, 589799, 11, 0, 524357, 12, 0, 655335, 11, 0, 589893, 12, 0, 720871, 11, 0, 655429, 12, 0, 786407, 11, 0, 720965, 12, 0 )

[node name="Princess" parent="." instance=ExtResource( 10 )]
position = Vector2( 60.04, 403.086 )
scale = Vector2( 2, 2 )

[node name="Camera2D" type="Camera2D" parent="Princess"]
current = true
limit_left = 0
limit_top = 0
limit_right = 1860
limit_bottom = 540
smoothing_enabled = true
editor_draw_limits = true

[node name="HUD" parent="." instance=ExtResource( 11 )]

[node name="CoinSound" parent="." instance=ExtResource( 12 )]

[node name="GameOverSound" parent="." instance=ExtResource( 13 )]

[node name="GameSound" parent="." instance=ExtResource( 14 )]

[connection signal="next_level" from="Forest/Portal" to="." method="_on_Portal_next_level"]
[connection signal="has_key" from="Forest/Key" to="." method="_on_Key_has_key"]
[connection signal="has_key" from="Forest/Key" to="Forest/Portal" method="_on_Key_has_key"]
[connection signal="damage" from="Forest/Goblin" to="." method="_on_Goblin_damage"]
[connection signal="enemy_dead" from="Forest/Goblin" to="." method="_on_Goblin_enemy_dead"]
[connection signal="damage" from="Forest/Goblin2" to="." method="_on_Goblin_damage"]
[connection signal="enemy_dead" from="Forest/Goblin2" to="." method="_on_Goblin_enemy_dead"]
[connection signal="add_coin" from="Forest/Coin" to="." method="_on_Coin_add_coin"]
[connection signal="add_coin" from="Forest/Coin2" to="." method="_on_Coin_add_coin"]
[connection signal="add_coin" from="Forest/Coin3" to="." method="_on_Coin_add_coin"]
[connection signal="add_coin" from="Forest/Coin4" to="." method="_on_Coin_add_coin"]
[connection signal="add_coin" from="Forest/Coin5" to="." method="_on_Coin_add_coin"]
[connection signal="add_coin" from="Forest/Coin6" to="." method="_on_Coin_add_coin"]
[connection signal="add_coin" from="Forest/Coin7" to="." method="_on_Coin_add_coin"]
[connection signal="add_coin" from="Forest/Coin8" to="." method="_on_Coin_add_coin"]
[connection signal="add_coin" from="Forest/Coin9" to="." method="_on_Coin_add_coin"]
[connection signal="add_coin" from="Forest/Coin10" to="." method="_on_Coin_add_coin"]
[connection signal="add_coin" from="Forest/Coin11" to="." method="_on_Coin_add_coin"]
[connection signal="add_coin" from="Forest/Coin12" to="." method="_on_Coin_add_coin"]
[connection signal="dead" from="Princess" to="." method="_on_Princess_dead"]
